# agents-production-final-project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  SPECIFICATION.md  docker-compose.yml  rebuild-compose.sh
agent-service/: .env.example  Dockerfile  README.md  SPECIFICATION.md  docker-entrypoint.sh  internal-tools-openapi.yaml  openapi.yaml  pyproject.toml
agent-service/src/agent_service/: __init__.py  config.py  contract_b.py  events.py  main.py  planner.py  runs.py  schemas.py  security.py
agent-service/tests/: conftest.py  smoke.py  test_catalog.py  test_flow.py  test_graph_clarify.py
backend/: .dockerignore  .env.example  Dockerfile  NOTES.md  README.md  SPECIFICATION.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  models.py  seed.py  session.py
backend/app/repositories/: __init__.py  groups.py  offers.py  plans.py  sessions.py  users.py
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  common.py  groups.py  internal.py  plans.py
backend/app/services/: __init__.py  agent_client.py  map_calendar.py  plan_validation.py  sse.py  tickets.py  tokens.py
backend/migrations/: env.py
backend/migrations/versions/: 20260614_0001_initial.py  20260614_0002_run_agent_mapping.py  20260614_0003_agent_message_id.py  20260614_0004_map_point_details.py  20260614_0005_run_event_sequence.py
backend/src/travel_backend/: __init__.py  config.py  database.py  errors.py  i18n.py  logging.py  main.py  models.py  rate_limit.py  schemas.py  security.py  seed.py
backend/tests/: conftest.py  test_access_control.py  test_auth.py  test_chat_agent_proxy.py  test_hardening.py  test_internal_tools.py  test_migrations.py  test_plans_validation.py  test_route_content.py  test_seed_idempotency.py  test_sse_tickets.py
docs/: DOCKER.md  (+3 more)
(+150 files in other folders)
