[project]
name = "agent-service"
version = "0.1.0"
description = "Travel-planning Agent Service — implements Contract A (Backend → Agent), calls Contract B for business data."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Реасонинг-ядро (наш Final-агент). Без него сервис работает на детерминированном планировщике.
llm = [
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-gigachat-lc1",
    "langchain-chroma",
    "chromadb",
]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "asgi-lifespan>=2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
