[project]
name = "travel-backend"
version = "0.1.0"
description = "FastAPI BFF for the travel-planning agent"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "argon2-cffi>=23.1",
  "email-validator>=2.2",
  "fastapi>=0.115",
  "httpx>=0.28",
  "pydantic-settings>=2.7",
  "pyjwt>=2.10",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0",
  "sse-starlette>=2.2",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "asgi-lifespan>=2.1",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_backend", "app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
